# clinic_ms

./: .gitignore  README.md  clinic_oop.db  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
app/: __init__.py  auth.py  cache.py  crud.py  database.py  logger_config.py  main.py  models.py  schemas.py
app/routers/: appointments.py  medicines.py  patients.py  reports.py  users.py
app/services/: appointment_service.py  base_service.py  medicine_service.py  patient_service.py  user_service.py
demo/: main.py
tests/: conftest.py  test_appointments.py  test_auth.py  test_medicines.py  test_patients.py
