[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic_ms"
version = "0.1.0"
description = "Clinic Management System"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Clinic Dev" }]
license = { text = "MIT" }

# runtime dependencies (optional but convenient)
dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "redis>=4.5",
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "venv*", ".venv*"]
